gccida/c0/loc_descriptor
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loc_descriptor/src/dwarf2out.c:8428:53: error: use of undeclared identifier 'machine_mode'
loc_result = mem_loc_descriptor( rtl->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtl)); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loc_descriptor/src/dwarf2out.c:8428:68: error: expected expression
loc_result = mem_loc_descriptor( rtl->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtl)); 
                                                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loc_descriptor/src/obj/dwarf2out.o] Error 1
